@@ -5,6 +5,8 @@ New Features:
   - A few minor performance improvements.
     
 Bug Fixes:
+  - Fixed a bug in the raycast(Ray,double,boolean,boolean,List<RaycastResult>)
+    method where it was calling itself, causing a StackOverflowException. 
     
 Deprecated:
 
@@ -14,6 +16,7 @@ Other:
   - Changed the Math.hypot calls to Math.sqrt since the former is much
     slower.  It's slower due to the overflow/underflow handling, which dyn4j
     doesn't need.
+  - Added code to export Rays for the Java exporter.
 
 ===============================================================================
 Version 3.1.10
